# RAGCDs

./: .gitignore  README.md  auto_qa_evaluator.py  auto_qa_generator.py  corpus_fliter.ipynb  example.env  pyproject.toml
config/: evaluator.yaml  generator.yaml
data/: claim_sets.json  failed_chunk.json  optimized_prompt_iter1.txt  optimized_prompt_iter2.txt  optimized_prompt_iter3.txt  queries.json  raw_chunk.json
data/chat_log/: chat_log1.txt  chat_log1.xlsx  chat_log2.txt  chat_log2.xlsx
data/dataset/: 202401101319427N3J.txt  202401180935042Hyr.txt  202401181613468fAy.txt  202401241102342KxP.txt  202401241937248QyQ.0-S138589472400456X-main.txt  202401250000537Es4.txt  202402011008582ePD.txt  202402011026552AT8.0-S0925838824002573-main.txt  202402031700113AZ4.txt  202402032146375hej.0-S027288422400453X-main.txt  202402161720397sE7.0-S0167577X24002842-main.txt  202402181036134KWW.txt  202402201053417JYP.0-S0304389424004035-main (1).txt  202402211534265TGB.txt  202402241048343w5r.txt  202402281507327hzB.txt  202402281705346W62.txt  202402282032416eXe.txt  202402291056437Psa.txt  202403021138036Aw8.txt  202403032204186y3Q.txt  202403050856163EeA.txt  202403051114196jFr.0-S1876107024000877-main.txt  202403081434227dXJ.txt  202403111718574B4i.txt  202403131207592WXD.txt  202403150952233kys.txt  202403200915478J6G.txt  202403211643125Mf2.txt  202403211803232mX2.com).txt  202403240938373hAF.txt  202403261702503HNG.0-S0269749124005797-main.txt  (+18 more)
data_drug/: claim_sets.json  failed_chunk.json  queries.json  raw_chunk.json
src/: __init__.py  utils.py
(+184 files in other folders)
