[tool.poetry]
name = "multihoppaperqa"
version = "0.1.0"
description = "A method for automatically generating query-answer pairs from PDF papers"
authors = ["LYQ <liuyanqing@shiyanjia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "0.11.17"
llama-index-embeddings-azure-openai = "0.2.5"
llama-index-embeddings-openai = "0.2.5"
openai = "1.51.2"
python-dotenv = "1.0.1"
llama-index-retrievers-bm25 = "0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
